@@ -1,4 +1,5 @@
 Adminer dev:
+MySQL: Display default values of binary columns
 
 Adminer 5.0.4 (released 2025-03-11):
 Compile: Fix shortening in private methods (regression from 5.0.3)
